# Alt_Text_Generator

./: .gitignore  README.md  memory.md  prompt-rules.md  pyproject.toml  status.md
assets/: upload_via_ftp.py
src/wp_alt_text/: __init__.py  apply.py  cli.py  config.py  prompting.py  reporting.py  review.py  review_html.py  suggestion.py  wordpress.py
tests/: test_review_apply.py
